--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
+  "dependencies": {
+    "@solana-developers/helpers": "^2.3.0",
+    "@solana/web3.js": "^1.93.1",
+    "esrun": "^3.2.26",
+    "typescript": "^5.5.2"
+  },
   "name": "telegrambot",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "description": ""
