--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+PUBLIC_KEY = "BBURQH3QxNt5bjCojTeXZbnL1FgFQBKvRQS31B1Czqwx"
 SECRET_KEY = "[
   168,   8, 160, 100,  54,  93, 145, 243, 201,  23, 190,
   135, 210, 160, 172, 211, 219,  75, 208, 176, 213, 210,
