--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
+    "@metaplex-foundation/mpl-token-metadata": "^2.13.0",
     "@solana-developers/helpers": "^2.3.0",
+    "@solana/spl-token": "^0.4.6",
     "@solana/web3.js": "^1.93.1",
     "dotenv": "^16.4.5",
     "esrun": "^3.2.26",
